@@ -38,7 +38,7 @@ export HBASE_HEAPSIZE={{ hbase_heapsize }}
 # Below are what we set by default.  May only work with SUN JVM.
 # For more on why as well as other possible settings,
 # see http://wiki.apache.org/hadoop/PerformanceTuning
-export HBASE_OPTS="-XX:+UseConcMarkSweepGC"
+export HBASE_OPTS="-XX:+UseG1GC"
 
 # Uncomment one of the below three options to enable java garbage collection logging for the server-side processes.
 
